--- a/css/output.css
+++ b/css/output.css
@@ -558,6 +558,40 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -626,6 +660,10 @@ video {
   width: 30%;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-5p {
   width: 5%;
 }
@@ -638,8 +676,12 @@ video {
   width: 100%;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .-rotate-90 {
@@ -680,25 +722,25 @@ video {
   padding-right: 6rem;
 }
 
-.pl-16 {
+.px-16 {
   padding-left: 4rem;
-}
-
-.pt-48 {
-  padding-top: 12rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
+  padding-right: 4rem;
 }
 
 .pl-4 {
   padding-left: 1rem;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+.pt-48 {
+  padding-top: 12rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .text-sm {
@@ -709,6 +751,16 @@ video {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -728,8 +780,28 @@ video {
   font-weight: 100;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
+}
+
+.leading-normal {
+  line-height: 1.5;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .tracking-extra {
