--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,82 @@
     filter: drop-shadow(0px 0px 100px #000);
 }
 /* ~~ FIRSTPAGE CONTENT ~~ */
+
+
+
+/* ~~ TEAMPAGE CONTENT ~~ */
+.teamPageLeft h1, .teamPageLeft i{
+    text-shadow: 0px 0px 10px #FA6515;
+}
+.container {
+    max-width: 1120px;
+    width: 100%;
+    padding: 40px 0;
+  }
+  .slide-container {
+    margin: 0 30px;
+    overflow: hidden;
+  }
+  .card {
+    background: #fff;
+    border-radius: 8px;
+  }
+  .card .image-box {
+    height: 250px;
+  }
+  .card .image-box img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 0 0;
+    object-fit: cover;
+    object-position: top;
+  }
+  .card .profile-details {
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+    padding: 15px;
+  }
+  .card .profile-details img {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: top;
+  }
+  .profile-details .name {
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .profile-details .job {
+    font-size: 12px;
+    font-weight: 500;
+    color: #4d4d4d;
+  }
+  .swiper-navBtn {
+    color: #000;
+    height: 40px;
+    width: 40px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px #000;
+  }
+  .swiper-navBtn::before,
+  .swiper-navBtn::after {
+    font-size: 18px;
+  }
+  .swiper-pagination-bullet {
+    background-color: #ffffff;
+  }
+/* ~~ TEAMPAGE CONTENT ~~ */
+
+
+
+
+/* ~~ MEDIA QUERY ~~ */
+@media screen and (max-width: 768px) {
+    .swiper-navBtn {
+      display: none;
+    }
+  }
+/* ~~ MEDIA QUERY ~~ */
