--- a/css/output.css
+++ b/css/output.css
@@ -448,6 +448,7 @@ video {
 
 :root{
   --base1 : #fff;
+  --base2 : #0072b1;
 }
 
 *, ::before, ::after {
@@ -616,6 +617,10 @@ video {
   top: 0px;
 }
 
+.-z-\[1\] {
+  z-index: -1;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -639,8 +644,8 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.-ml-8 {
-  margin-left: -2rem;
+.-ml-5 {
+  margin-left: -1.25rem;
 }
 
 .mb-0 {
@@ -687,10 +692,6 @@ video {
   margin-top: 2rem;
 }
 
-.-ml-5 {
-  margin-left: -1.25rem;
-}
-
 .flex {
   display: flex;
 }
@@ -705,6 +706,10 @@ video {
 
 .h-24 {
   height: 6rem;
+}
+
+.h-28 {
+  height: 7rem;
 }
 
 .h-96 {
@@ -824,11 +829,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.bg-\[\#0072b1\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 114 177 / var(--tw-bg-opacity));
-}
-
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -836,6 +836,10 @@ video {
 
 .bg-skin-base1 {
   background-color: var(--base1);
+}
+
+.bg-skin-base2 {
+  background-color: var(--base2);
 }
 
 .bg-cover {
@@ -950,23 +954,27 @@ video {
   letter-spacing: 0.1em;
 }
 
-.text-\[\#304C83\] {
+.text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(48 76 131 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-skin-base1 {
   color: var(--base1);
 }
 
+.text-skin-base2 {
+  color: var(--base2);
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .hover\:font-bold:hover {
