--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,11 @@
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
   }
-  .cards .insta, .cards .insta .img, .cards .linkedin, .cards .linkedin .img{
-    box-shadow: 0px 0px 20px #9f9f9f;
+  .cards .insta, .cards .insta .backdropCircle{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(40, 40, 40, 0.3) 0px 18px 36px -18px inset, rgba(220, 39, 67, 1) 0px 0px 15px;
+  }
+  .cards .linkedin, .cards .linkedin .backdropCircle{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(40, 40, 40, 0.3) 0px 18px 36px -18px inset, rgba(0, 114, 177, 1) 0px 0px 15px;
   }
 /* ~~ SOCIAL CARDS CONTENT ~~ */
 
